🔒 SECURITY: Remove sensitive data from config files
✅ Fixed security issues:
- Removed database password from appsettings.json
- Moved sensitive connection string to .env (ignored by git)
- Updated Program.cs to read from Environment Variables
- Added load-env.sh script for local development
- Created SECURITY.md with best practices

🛡️ Security changes:
- appsettings.json: localhost connection only
- appsettings.Production.json: empty connection string
- Program.cs: Environment.GetEnvironmentVariable() priority
- .env: contains real connection string (NOT committed)

For deployment: Set DATABASE_CONNECTION_STRING environment variable

--- a/src/ECommerce.API/appsettings.json
+++ b/src/ECommerce.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=ep-bitter-heart-a1fstxow-pooler.ap-southeast-1.aws.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_DuZ63vKLnYzH;SSL Mode=Require"
+    "DefaultConnection": "Host=localhost;Database=ecommerce;Username=postgres;Password=dev123"
   },
   "Logging": {
     "LogLevel": {
